--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Sample JWT verification with JWKS",
+  "name": "sample-jwt-verification-with-jwks",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
